--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,25 @@
   box-sizing: border-box;
 }
 
-img {
-  width: 100%;
-  min-height: 350px;
-  max-height: 350px;
-  height: auto;
-  transition: 0.3s ease all;
+.test {
+  transition: 0.2s ease all;
 }
 
-img:hover {
+.test:hover {
   scale: 102%;
+}
+
+.custom-loader {
+  width: 50px;
+  height: 50px;
+  --c: radial-gradient(farthest-side, #63b3ed 92%, #0000);
+  background: var(--c) 50% 0, var(--c) 50% 100%, var(--c) 100% 50%, var(--c) 0 50%;
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  animation: s7 2s infinite;
+}
+@keyframes s7 {
+  to {
+    transform: rotate(0.5turn);
+  }
 }
